# data-scraping

./: .gitignore  .instagram_cookies.txt  Data gathering example(1).xlsx  README.md  instagram_scraper.py  pyproject.toml  reddit_scraper.py  tiktok_scraper.py  transcriber.py
